--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.7.2",
     "i18next": "^24.2.3",
     "react": "^19.0.0",
